# BigNum

./: CMakeLists.txt  README.md
include/bigfloat/: Arithmetic.hpp  BigFloat.hpp  Relational.hpp  Utils.hpp
include/bigint/: Algorithms.hpp  Arithmetic.hpp  BigInt.hpp  Bitwise.hpp  Logical.hpp  Relational.hpp  Utils.hpp
src/bigfloat/: Arithmetic.cpp  BigFloat.cpp  Relational.cpp  Utils.cpp
src/bigint/: Algorithms.cpp  Arithmetic.cpp  BigInt.cpp  Bitwise.cpp  Logical.cpp  Relational.cpp  Utils.cpp
tests/: test_addition  test_addition.cpp  test_bigint  test_bigint.cpp  test_compound_add  test_compound_add.cpp  test_division.cpp  test_mod.cpp  test_multiplication.cpp  test_multiplication_karatsuba.cpp  test_relational  test_relational.cpp  test_subtraction.cpp
